CREATE SEQUENCE IF NOT EXISTS resource_id_seq START WITH 1000;
CREATE SEQUENCE IF NOT EXISTS physical_item_id_seq START WITH 10000;
CREATE SEQUENCE IF NOT EXISTS digital_item_id_seq START WITH 1000;

CREATE TABLE IF NOT EXISTS resource (
    id BIGINT PRIMARY KEY,
    title VARCHAR(255) NOT NULL,
    authors VARCHAR(255) NOT NULL,
    description TEXT,
    category VARCHAR(100)
);

ALTER TABLE resource ADD COLUMN IF NOT EXISTS category VARCHAR(100);

CREATE TABLE IF NOT EXISTS physical_item (
    id BIGINT PRIMARY KEY,
    resource_id BIGINT NOT NULL,
    barcode VARCHAR(255),
    location VARCHAR(255),
    inventory_status VARCHAR(32),
    circulation_status VARCHAR(32),
    CONSTRAINT fk_physical_resource
        FOREIGN KEY (resource_id)
            REFERENCES resource(id)
            ON DELETE CASCADE
);

-- Expand: Add new columns if legacy table exists
ALTER TABLE physical_item ADD COLUMN IF NOT EXISTS barcode VARCHAR(255);
ALTER TABLE physical_item ADD COLUMN IF NOT EXISTS location VARCHAR(255);
ALTER TABLE physical_item ADD COLUMN IF NOT EXISTS inventory_status VARCHAR(32);
ALTER TABLE physical_item ADD COLUMN IF NOT EXISTS circulation_status VARCHAR(32);

-- Backfill: Populate new columns for legacy data
UPDATE physical_item SET inventory_status = 'ACTIVE' WHERE inventory_status IS NULL;
UPDATE physical_item SET circulation_status = CASE
    WHEN status = 'AVAILABLE' THEN 'AVAILABLE'
    WHEN status = 'RESERVED' THEN 'RESERVED'
    WHEN status IN ('BORROWED', 'OVERDUE') THEN 'BORROWED'
    ELSE 'AVAILABLE'
END WHERE circulation_status IS NULL AND status IS NOT NULL;
UPDATE physical_item SET circulation_status = 'AVAILABLE' WHERE circulation_status IS NULL;
UPDATE physical_item SET barcode = CONCAT('LIB-', id) WHERE barcode IS NULL;
UPDATE physical_item SET location = 'UNASSIGNED' WHERE location IS NULL;

-- Constrain: Remove legacy status and apply NOT NULL, UNIQUE, and CHECK constraints
ALTER TABLE physical_item DROP CONSTRAINT IF EXISTS chk_physical_item_status;
ALTER TABLE physical_item DROP COLUMN IF EXISTS status;

ALTER TABLE physical_item ALTER COLUMN barcode SET NOT NULL;
ALTER TABLE physical_item ALTER COLUMN location SET NOT NULL;
ALTER TABLE physical_item ALTER COLUMN inventory_status SET NOT NULL;
ALTER TABLE physical_item ALTER COLUMN circulation_status SET NOT NULL;

ALTER TABLE physical_item DROP CONSTRAINT IF EXISTS uq_physical_item_barcode;
ALTER TABLE physical_item ADD CONSTRAINT uq_physical_item_barcode UNIQUE (barcode);

ALTER TABLE physical_item DROP CONSTRAINT IF EXISTS chk_physical_item_inventory_status;
ALTER TABLE physical_item ADD CONSTRAINT chk_physical_item_inventory_status
    CHECK (inventory_status IN ('ACTIVE', 'LOST', 'DAMAGED', 'WITHDRAWN'));

ALTER TABLE physical_item DROP CONSTRAINT IF EXISTS chk_physical_item_circulation_status;
ALTER TABLE physical_item ADD CONSTRAINT chk_physical_item_circulation_status
    CHECK (circulation_status IN ('AVAILABLE', 'RESERVED', 'BORROWED'));

CREATE TABLE IF NOT EXISTS digital_item (
    id BIGINT PRIMARY KEY,
    resource_id BIGINT NOT NULL UNIQUE,
    CONSTRAINT fk_digital_resource
        FOREIGN KEY (resource_id)
            REFERENCES resource(id)
            ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS accounts (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email VARCHAR(255) NOT NULL UNIQUE,
    password_hash VARCHAR(255) NOT NULL,
    display_name VARCHAR(255),
    role VARCHAR(32) NOT NULL,
    account_status VARCHAR(32) NOT NULL,
    created_at TIMESTAMP NOT NULL,
    updated_at TIMESTAMP NOT NULL,
    CONSTRAINT chk_account_role
        CHECK (role IN ('READER', 'LIBRARIAN')),
    CONSTRAINT chk_account_status
        CHECK (account_status IN ('ACTIVE', 'DISABLED'))
);

CREATE TABLE IF NOT EXISTS borrow_request (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

    reader_id BIGINT NOT NULL,
    resource_id BIGINT NOT NULL,
    physical_item_id BIGINT,

    status VARCHAR(32) NOT NULL,

    requested_at TIMESTAMP NOT NULL,
    status_updated_at TIMESTAMP NOT NULL,
    expires_at TIMESTAMP,

    prepared_at TIMESTAMP,
    prepared_by BIGINT,

    rejected_at TIMESTAMP,
    rejected_by BIGINT,
    rejection_reason VARCHAR(500),

    fulfilled_at TIMESTAMP,
    fulfilled_by BIGINT,

    created_at TIMESTAMP NOT NULL,
    updated_at TIMESTAMP NOT NULL,

    CONSTRAINT fk_borrow_request_reader
        FOREIGN KEY (reader_id)
            REFERENCES accounts(id),

    CONSTRAINT fk_borrow_request_resource
        FOREIGN KEY (resource_id)
            REFERENCES resource(id),

    CONSTRAINT fk_borrow_request_item
        FOREIGN KEY (physical_item_id)
            REFERENCES physical_item(id),

    CONSTRAINT fk_borrow_request_prepared_by
        FOREIGN KEY (prepared_by)
            REFERENCES accounts(id),

    CONSTRAINT fk_borrow_request_rejected_by
        FOREIGN KEY (rejected_by)
            REFERENCES accounts(id),

    CONSTRAINT fk_borrow_request_fulfilled_by
        FOREIGN KEY (fulfilled_by)
            REFERENCES accounts(id),

    CONSTRAINT chk_borrow_request_status
        CHECK (status IN (
            'REQUESTED',
            'READY_FOR_PICKUP',
            'FULFILLED',
            'CANCELLED',
            'REJECTED',
            'EXPIRED'
        ))
);

CREATE TABLE IF NOT EXISTS borrowing (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

    physical_item_id BIGINT NOT NULL,
    reader_id BIGINT NOT NULL,
    -- Bảo vệ invariant: một borrow request chỉ được fulfil thành một borrowing.
    borrow_request_id BIGINT NOT NULL UNIQUE,

    borrowed_at TIMESTAMP NOT NULL,
    due_at TIMESTAMP NOT NULL,
    returned_at TIMESTAMP,

    CONSTRAINT fk_borrowing_physical
        FOREIGN KEY (physical_item_id)
            REFERENCES physical_item(id),

    CONSTRAINT fk_borrowing_reader
        FOREIGN KEY (reader_id)
            REFERENCES accounts(id),

    CONSTRAINT fk_borrowing_request
        FOREIGN KEY (borrow_request_id)
            REFERENCES borrow_request(id),

    CONSTRAINT chk_borrowing_due_after_borrowed
        CHECK (due_at > borrowed_at),

    CONSTRAINT chk_borrowing_returned_after_borrowed
        CHECK (returned_at IS NULL OR returned_at >= borrowed_at)
);

-- Bảo vệ invariant: một physical item chỉ nằm trong một active request.
CREATE UNIQUE INDEX IF NOT EXISTS uq_active_request_physical_item
    ON borrow_request (physical_item_id)
    WHERE status IN ('REQUESTED', 'READY_FOR_PICKUP');

-- Bảo vệ invariant: một reader chỉ có một active request cho cùng resource.
CREATE UNIQUE INDEX IF NOT EXISTS uq_active_request_reader_resource
    ON borrow_request (reader_id, resource_id)
    WHERE status IN ('REQUESTED', 'READY_FOR_PICKUP');

-- Bảo vệ invariant: một physical item chỉ có một active borrowing chưa trả.
CREATE UNIQUE INDEX IF NOT EXISTS uq_active_borrowing_physical_item
    ON borrowing (physical_item_id)
    WHERE returned_at IS NULL;

-- Hỗ trợ lock/select copy ACTIVE & AVAILABLE theo resource khi reserve hoặc reconcile số lượng.
DROP INDEX IF EXISTS idx_physical_item_allocation;
CREATE INDEX IF NOT EXISTS idx_physical_item_allocation
    ON physical_item (resource_id, inventory_status, circulation_status, id);

-- Hỗ trợ My Library active query theo reader và trạng thái request.
CREATE INDEX IF NOT EXISTS idx_borrow_request_reader_active
    ON borrow_request (reader_id, status, requested_at, id);

CREATE INDEX IF NOT EXISTS idx_borrow_request_reader_outcomes
    ON borrow_request (reader_id, status_updated_at, id);

-- Scheduler chỉ quét active request đã quá hạn, không scan toàn bộ lịch sử request.
CREATE INDEX IF NOT EXISTS idx_borrow_request_expiration
    ON borrow_request (expires_at, id)
    WHERE status IN ('REQUESTED', 'READY_FOR_PICKUP');

-- Hỗ trợ active/overdue borrowing query; overdue được derive từ due_at và returned_at.
CREATE INDEX IF NOT EXISTS idx_borrowing_reader_active_due
    ON borrowing (reader_id, due_at, borrowed_at, id)
    WHERE returned_at IS NULL;

-- Hỗ trợ queue librarian cho active borrowing và sắp xếp overdue theo due_at.
CREATE INDEX IF NOT EXISTS idx_borrowing_active_due
    ON borrowing (due_at, borrowed_at, id)
    WHERE returned_at IS NULL;
