erDiagram
    RESOURCE ||--o{ PHYSICAL_ITEM : has
    RESOURCE ||--o| DIGITAL_ITEM : offers
    RESOURCE ||--o{ BORROW_REQUEST : requested_for
    ACCOUNTS ||--o{ BORROW_REQUEST : submits
    PHYSICAL_ITEM ||--o{ BORROW_REQUEST : allocated_to
    BORROW_REQUEST ||--o| BORROWING : creates
    ACCOUNTS ||--o{ BORROWING : borrows
    PHYSICAL_ITEM ||--o{ BORROWING : loan_history

    RESOURCE {
        BIGINT id PK
        VARCHAR title
        VARCHAR authors
        TEXT description
        VARCHAR category
    }
    PHYSICAL_ITEM {
        BIGINT id PK
        BIGINT resource_id FK
        VARCHAR status
    }
    DIGITAL_ITEM {
        BIGINT id PK
        BIGINT resource_id FK
    }
    ACCOUNTS {
        BIGINT id PK
        VARCHAR email UK
        VARCHAR password_hash
        VARCHAR display_name
        VARCHAR role
        VARCHAR account_status
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
    BORROW_REQUEST {
        BIGINT id PK
        BIGINT reader_id FK
        BIGINT resource_id FK
        BIGINT physical_item_id FK
        VARCHAR status
        TIMESTAMP requested_at
        TIMESTAMP status_updated_at
        TIMESTAMP expires_at
        TIMESTAMP prepared_at
        BIGINT prepared_by FK
        TIMESTAMP rejected_at
        BIGINT rejected_by FK
        VARCHAR rejection_reason
        TIMESTAMP fulfilled_at
        BIGINT fulfilled_by FK
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
    BORROWING {
        BIGINT id PK
        BIGINT physical_item_id FK
        BIGINT reader_id FK
        BIGINT borrow_request_id FK
        TIMESTAMP borrowed_at
        TIMESTAMP due_at
        TIMESTAMP returned_at
    }
